--- a/src/components/Main/Main.module.css
+++ b/src/components/Main/Main.module.css
@@ -9,6 +9,15 @@ main {
     padding: 1em;
 }
 
+.ListContainer {
+    display: flex;
+    flex-direction: column;
+}
+    .ListContainer > div + div {
+        align-self: center;
+        margin-top: 4em;
+    }
+
 .List {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
