--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -20,3 +20,31 @@ header {
     .Logo img {
         height: 5em;
     }
+
+.Navigation {
+    display: flex;
+    align-items: center;
+    padding: 0.5em 1em;
+}
+.Search {
+    display: flex;
+    align-items: center;
+    margin-right: 4em;
+}
+    .Search input {
+        width: 10em;
+        margin-right: 0.5em;
+        padding-left: 0.5em;
+        border: none;
+        border-bottom: 1px solid rgba(96,118,154,0.5);
+    }
+    .Search input:focus {
+        outline: none;
+    }
+    .Search input::placeholder {
+        color: rgba(96,118,154,0.4);
+    }
+    .Search label {
+        font-size: 1.5em;
+        color: rgba(96,118,154,0.5);
+    }
