Fix pin item functionality

--- a/src/components/Product/Item/Item.module.css
+++ b/src/components/Product/Item/Item.module.css
@@ -2,6 +2,13 @@
     perspective: 1000px;
     cursor: pointer;
 }
+    .Outer > span {
+        position: absolute;
+        top: 1em; right: 1em;
+        font-size: 0.7em;
+        color: var(--err);
+        z-index: 40;
+    }
 .Open {
     position: relative;
     z-index: 1;
