--- a/src/components/Product/Item/Item.module.css
+++ b/src/components/Product/Item/Item.module.css
@@ -1,24 +1,19 @@
-.Outer {
+.Wrapper {
     perspective: 1000px;
+}
+.Container {
+    transform-style: preserve-3d;
     cursor: pointer;
 }
-    .Outer > span {
-        position: absolute;
-        top: 1em; right: 1em;
-        font-size: 0.7em;
-        color: var(--err);
-        z-index: 40;
-    }
-.Open {
-    position: relative;
+.Container > span {
+    position: absolute;
+    top: 1em; right: 1em;
+    font-weight: 600;
+    font-size: 0.7em;
+    color: var(--err);
     z-index: 1;
 }
 
-.Inner {
-    height: 300px;
-    transform-style: preserve-3d;
-    transition: transform 0.5s;
-}
 .Flipped {
     transform: rotateY(180deg);
 }
@@ -26,64 +21,94 @@
     transform: rotateY(-180deg);
 }
 
+.Cart {
+    transform-style: preserve-3d;
+    transition: transform 0.5s ease;
+}
+
 .Front,
 .Back {
-    border-radius: 4px;
+    border-radius: 0.5em;
     backface-visibility: hidden;
+    transform-style: preserve-3d;
 }
+
 .Front {
     position: relative;
-    height: 100%;
-    padding: 2em;
-    background: white;
+    padding: 3em;
+    background-color: white;
     color: var(--text);
-    overflow: hidden;
 }
-.Front img {
-    position: absolute;
-    top: 0; left: 2.5em;
-    width: 80%; height: 100%;
-    object-fit: contain;
-    transform: rotate(-25deg);
-}
-.Front > div + div {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    height: 100%;
-    letter-spacing: -1px;
-}
-.Front span {
-    align-self: flex-end;
-    color: var(--green);
-}
-.FrontHeader {
+    .Front h3 {
+        min-height: 5.25em;
+        font-weight: 600;
+        font-size: 1.25em;
+        letter-spacing: -1px;
+    }
+    
+.Header {
     display: flex;
     justify-content: space-between;
+    transition: all 0.5s ease-out;
 }
+    
 .Icons {
     display: flex;
 }
-.Icons span {
-    align-self: flex-start;
-    margin-left: 0.5em;
-    font-size: 1.2em;
-    color: var(--grey);
-    transition: all 0.3s ease;
+    .Icons span {
+        align-self: flex-start;
+        margin-left: 0.5em;
+        font-size: 1.2em;
+        color: var(--grey);
+        transition: all 0.3s ease;
+    }
+    .Icons span:hover {
+        color: var(--green);
+    }
+
+.Img {
+    transition: all 0.5s ease-out;
 }
-.Icons span:hover {
-    color: var(--green);
+    .Img img {
+        width: 100%; height: 100%;
+        object-fit: contain;
+    }
+
+.BgImg img {
+    position: absolute;
+    top: 50%; left: 50%;
+    transform: translate(-50%, -50%);
+    width: 40%;
+    filter: blur(3px);
+    transition: all 0.5s ease-out;
+    z-index: -1;
 }
+    .Front:hover .BgImg img {
+        filter: blur(0px);
+    }
+
+.Price {
+    display: flex;
+    justify-content: flex-end;
+    margin-top: 4em;
+    transition: all 0.5s ease-out;
+}
+    .Price span {
+        display: inline-block;
+        font-weight: 600;
+        font-size: 1.25em;
+        letter-spacing: -1px;
+        color: var(--green);
+    }
 
 .Back {
     position: absolute;
     top: 0; left: 0;
     display: flex;
     flex-direction: column;
+    padding: 3em 3em 2em 3em;
     width: 100%; height: 100%;
     transform: rotateY(180deg);
-    padding: 2em;
     background: white;
 }
     .Back button {
@@ -94,18 +119,50 @@
         background: none;
         color: var(--grey);
         outline: none;
-        transition: all 0.3s ease;
+        transition: all 0.5s ease-out;
     }
     .Back button:hover {
         color: var(--green);
     }
-.BackHeader h4 {
+
+.BackHeader {
     color: var(--grey);
+    transition: all 0.5s ease-out;
 }
+    .BackHeader h4 {
+        font-weight: 600;
+    }
+
 .BackDesc {
     margin-top: 1em;
-    overflow: hidden;
+    overflow: scroll;
+    scroll-behavior: smooth;
+    transition: all 0.5s ease-out;
 }
+    .BackDesc::-webkit-scrollbar {
+        display: none;
+    }
+
+.BackScroll {
+    align-self: center;
+    display: flex;
+    flex-direction: column;
+    margin-top: 0.5em;
+    text-transform: uppercase;
+    color: var(--green);
+}
+    .BackScroll span {
+        font-weight: 600;
+        font-size: 0.6em;
+    }
+    .BackScroll .Arrow {
+        align-self: center;
+        display: block;
+        width: 1em; height: 1em;
+    }
+    .BackScroll .Text {
+        font-size: 0.8em;
+    }
 
 .Show {
     min-height: 300px;
