Update product cart functionality

--- a/src/components/Main/Main.module.css
+++ b/src/components/Main/Main.module.css
@@ -13,7 +13,7 @@ main {
     display: flex;
     flex-direction: column;
 }
-    .ListContainer > div + div {
+    .ListContainer > div {
         align-self: center;
         margin-top: 4em;
     }
