--- a/src/components/Product/Item/Item.module.css
+++ b/src/components/Product/Item/Item.module.css
@@ -1,17 +1,19 @@
 .Wrapper {
+    position: relative;
     perspective: 1000px;
 }
+    .Wrapper > span {
+        position: absolute;
+        top: 1em; right: 1em;
+        font-weight: 600;
+        font-size: 0.7em;
+        color: var(--err);
+        z-index: 1;
+    }
+
 .Container {
     transform-style: preserve-3d;
     cursor: pointer;
-}
-.Container > span {
-    position: absolute;
-    top: 1em; right: 1em;
-    font-weight: 600;
-    font-size: 0.7em;
-    color: var(--err);
-    z-index: 1;
 }
 
 .Flipped {
@@ -28,6 +30,7 @@
 
 .Front,
 .Back {
+    height: 400px;
     border-radius: 0.5em;
     backface-visibility: hidden;
     transform-style: preserve-3d;
@@ -39,24 +42,27 @@
     background-color: white;
     color: var(--text);
 }
-    .Front h3 {
-        min-height: 5.25em;
-        font-weight: 600;
-        font-size: 1.25em;
-        letter-spacing: -1px;
-    }
-    
+.FrontContent {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%;
+}
 .Header {
     display: flex;
     justify-content: space-between;
     transition: all 0.5s ease-out;
 }
+    .Header h3 {
+        font-weight: 600;
+        font-size: 1.25em;
+        letter-spacing: -1px;
+    }
     
 .Icons {
     display: flex;
 }
     .Icons span {
-        align-self: flex-start;
         margin-left: 0.5em;
         font-size: 1.2em;
         color: var(--grey);
@@ -73,24 +79,21 @@
         width: 100%; height: 100%;
         object-fit: contain;
     }
-
-.BgImg img {
+.FrontBgImg img {
     position: absolute;
     top: 50%; left: 50%;
     transform: translate(-50%, -50%);
-    width: 40%;
+    width: 45%;
     filter: blur(3px);
     transition: all 0.5s ease-out;
     z-index: -1;
 }
-    .Front:hover .BgImg img {
+    .Front:hover .FrontBgImg img {
         filter: blur(0px);
     }
-
 .Price {
     display: flex;
     justify-content: flex-end;
-    margin-top: 4em;
     transition: all 0.5s ease-out;
 }
     .Price span {
@@ -106,7 +109,7 @@
     top: 0; left: 0;
     display: flex;
     flex-direction: column;
-    padding: 3em 3em 2em 3em;
+    padding: 3em 2em 3em 3em;
     width: 100%; height: 100%;
     transform: rotateY(180deg);
     background: white;
@@ -124,7 +127,6 @@
     .Back button:hover {
         color: var(--green);
     }
-
 .BackHeader {
     color: var(--grey);
     transition: all 0.5s ease-out;
@@ -132,81 +134,26 @@
     .BackHeader h4 {
         font-weight: 600;
     }
-
 .BackDesc {
     margin-top: 1em;
-    overflow: scroll;
-    scroll-behavior: smooth;
     transition: all 0.5s ease-out;
 }
-    .BackDesc::-webkit-scrollbar {
-        display: none;
+    .BackDesc p {
+        padding-right: 1em;
     }
-
-.BackScroll {
-    align-self: center;
-    display: flex;
-    flex-direction: column;
-    margin-top: 0.5em;
-    text-transform: uppercase;
-    color: var(--green);
-}
-    .BackScroll span {
-        font-weight: 600;
-        font-size: 0.6em;
+    .BackDesc > div > div + div > div {
+        background-color: rgba(26,188,156,0.3) !important;
     }
-    .BackScroll .Arrow {
-        align-self: center;
-        display: block;
-        width: 1em; height: 1em;
-    }
-    .BackScroll .Text {
-        font-size: 0.8em;
-    }
-
 .Show {
     min-height: 300px;
     height: max-content;
 }
 
-@media (min-width: 992px) and (max-width: 1200px) {
+@media (max-width: 1200px) {
     .Inner {
         height: 250px;
     }
     .Show {
         min-height: 250px;
-    }
-}
-@media (max-width: 768px) {
-    .Front img {
-        left: 2em;
-    }
-    .Inner {
-        height: 240px;
-    }
-    .Show {
-        min-height: 240px;
-    }
-}
-@media (max-width: 576px) {
-    .Front img {
-        left: 2.5em;
-    }
-    .Inner {
-        height: 360px;
-    }
-    .Show {
-        min-height: 360px;
-    }
-}
-@media (max-width: 460px) {
-    .Front img {
-        left: 2em;
-    }
-    .Inner {
-        height: 260px;
-    }
-    .Show {
-        min-height: 260px;
     }
 }
